2008-08-16  Martin Nordholts  <martinn@svn.gnome.org>

	* app/display/gimpdisplayshell-scale.c
	(gimp_display_shell_scale_to): Reimplement to increase
	readability.

2008-08-16  Martin Nordholts  <martinn@svn.gnome.org>

	* app/display/gimpdisplayshell-scale.c
	(gimp_display_shell_scale_to): Nice-ify.

2008-08-16  Martin Nordholts  <martinn@svn.gnome.org>

	* app/display/gimpdisplayshell-scale.[ch]
	(gimp_display_shell_scale_get_zoom_focus)
	(gimp_display_shell_scale_image_is_within_viewport): Support axis
	independence.

	* app/display/gimpdisplayshell.c
	(gimp_display_shell_zoom_button_callback): Adapt to new
	gimp_display_shell_scale_image_is_within_viewport().

2008-08-16  Martin Nordholts  <martinn@svn.gnome.org>

	* app/display/gimpdisplayshell-scale.c
	(gimp_display_shell_scale_image_is_within_viewport): Make proper
	tests (>= not >)...

2008-08-16  Daniel Eddeland  <danedde@svn.gnome.org>

	* app/text/gimptext.c: corrected gimp_text_set_property for
	"box-unit" , fixing bug #547126

2008-08-15  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/pixelize.c: formatting.

2008-08-15  Martin Nordholts  <martinn@svn.gnome.org>

	* app/display/gimpdisplayshell-scale.c (gimp_display_shell_scale):
	More elegantly deal with the 'Resize window on zoom'-case.

2008-08-15  Daniel Eddeland  <danedde@svn.gnome.org>

	* app/text/gimptextlayout-render.c: make text align correctly if
	text-box is FIXED.

2008-08-15  Michael Natterer  <mitch@gimp.org>

	* app/paint/gimppaintcore-stroke.c
	(gimp_paint_core_stroke_boundary)
	(gimp_paint_core_stroke_vectors): when stroking multiple segments,
	set paint_core->cur_coords to the start of each segment. It
	normally gets assigned by gimp_paint_core_start(), but that's not
	called for subsequent segments. Fixes stroking multiple segments
	with the ink tool. The other tools were not affected since they
	plot individual brushes rather than a shape from the last to the
	current coordinates. Spotted by Alexia.
