@@ -97,9 +97,7 @@ typedef enum
   (gimp_rectangle_tool_get_private (GIMP_RECTANGLE_TOOL (obj)))
 
 
-typedef struct _GimpRectangleToolPrivate GimpRectangleToolPrivate;
-
-struct _GimpRectangleToolPrivate
+typedef struct
 {
   /* The following members are "constants", that is, variables that are setup
    * during gimp_rectangle_tool_button_press and then only read.
@@ -202,7 +200,7 @@ struct _GimpRectangleToolPrivate
 
   /* Synced with options->guide, only exists for drawing. */
   GimpRectangleGuide      guide;
-};
+} GimpRectangleToolPrivate;
 
 
 static void          gimp_rectangle_tool_iface_base_init      (GimpRectangleToolInterface *iface);
