@@ -1,3 +1,8 @@
+2008-08-16  Sven Neumann  <sven@gimp.org>
+
+	* app/tools/gimpfreeselecttool.c
+	* app/tools/gimprectangletool.c: formatting.
+
 2008-08-16  Martin Nordholts  <martinn@svn.gnome.org>
 
 	* app/display/gimpdisplayshell-scale.c
